# DictateEasy

./: Cargo.toml  LICENSE  README.md  index.html
assets/: main.css  main.scss
doc/: index-c7bb11544c879bba.js
docs/: index-297e9ee27c724400.js  index-297e9ee27c724400_bg.wasm  index-43bdca1ce3c74996.js  index-43bdca1ce3c74996_bg.wasm  index-8d08595933634686.js  index-8d08595933634686_bg.wasm  index-90e17f27f842625f.js  index-90e17f27f842625f_bg.wasm  index-c514d8ae0eba9f3f.js  index-c514d8ae0eba9f3f_bg.wasm  index-c7bb11544c879bba_bg.wasm  index.html
src/: main.rs  mod.rs
src/components/: basic.rs  buttons.rs  check.rs  description.rs  dictation.rs  dictation_copy.rs  header.rs  mod.rs  modal.rs  sidebar.rs  textarea.rs
src/service/: http.rs
