[package]
name = "dictation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features =["js-sys", "wasmbind"] }
gloo = "0.11.0"
js-sys = "0.3"
log = "0.4.22"
reqwest = { version ="0.11.14", features = ["json"]}
#tokio = {version = "1.38.0", features = ["full"]}
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
web-sys = "0.3.70"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.2"